syntax = "proto3";

package pb;

option go_package = "github.com/michael-m-truong/exercise-grpc/pb"; 

//protoc --go_out=paths=source_relative:pb --go-grpc_out=paths=source_relative:pb exercise.proto

//use this one
//protoc --go_out=paths=source_relative:. --go-grpc_out=paths=source_relative:. ./pb/exercise.proto


message Exercise {
    int32 id = 1;
    NewExercise exercise = 2;
}

message NewExercise {
    string name = 1;
    string description = 2;
    string muscle_group = 3;
    int32 user_id = 4;
}

message ExerciseIds {
    repeated int32 exercise_ids = 1;
}

message ExerciseExistence {
    bool exists = 1;
}

service ExerciseService {
    rpc CreateExercise(NewExercise) returns (Exercise);
    rpc CheckExerciseExists(ExerciseIds) returns (ExerciseExistence);
}
